# fastapi_todo

./: README.md
todo/: main.py  pyproject.toml
todo/todo/models/: models.py
todo/todo_frontend/: package-lock.json  package.json
todo/todo_frontend/src/: App.svelte
todo/todo_frontend/src/components/: TodoForm.svelte  TodoList.svelte
todo/todo_frontend/src/services/: todoService.js
