[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Matt DiNauta <mdinauta@zillowgroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.97.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
